--- a/unistramobile/index.html
+++ b/unistramobile/index.html
@@ -6,9 +6,9 @@
 	<style type="text/css"></style>
 </header>
 <body>
-	<div id="agenda">A</div>
-	<div id="edt">B</div>
-	<div id="annuaire">C</div>
-	<div id="chat">D</div>
+	<div id="agenda">Image A</div>
+	<div id="edt">Image B</div>
+	<div id="annuaire">Image C</div>
+	<div id="chat">Image D</div>
 </body>
 </html>
