Ajout des icones dans le html/css

--- a/unistramobile/index.html
+++ b/unistramobile/index.html
@@ -6,9 +6,12 @@
 	<style type="text/css"></style>
 </header>
 <body>
-	<div id="agenda">Image A</div>
-	<div id="edt">Image B</div>
-	<div id="annuaire">Image C</div>
-	<div id="chat">Image D</div>
+	<div id="agenda"><a href="index.html"><img src="icon/agenda-128.png"></a></div>
+	<div id="annuaire"><a href="index.html"><img src="icon/annuaire-128.png"></a></div>
+	<div id="manger"><a href="index.html"><img src="icon/manger-128.png"></a></div>
+	<div id="chat"><a href="index.html"><img src="icon/chat-128.png"></a></div>
 </body>
+<footer>
+	Flux RSS :
+</footer>
 </html>
