Couleurs, texte défilant
lorem ipsum défile en bas et les couleurs sont plus jolies.
Probmème : les couleurs sont juste grises sur Androïd et on peut encore
zoomer (avec deux doigts) et slider (quand le menu est affiché à
gauche).
Ces fonctions devront être désactivées.

--- a/unistramobile/index.html
+++ b/unistramobile/index.html
@@ -4,31 +4,37 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<style type="text/css"></style>
-
 </header>
+
 <body>
-	<!--div id="leftMenu"-->
-		<ul class="navigation">
-			<li class="nav-item"></li>
-			<li class="nav-item"><a href="#">Agenda</a></li>
-			<li class="nav-item"><a href="#">Annuaire</a></li>
-			<li class="nav-item"><a href="#">Menu RU</a></li>
-			<li class="nav-item"><a href="#">Chat</a></li>
-			<li class="nav-item"><a href="#">Paramètres</a></li>
-			<li class="nav-item"><a href="#">Quitter</a></li>
-		</ul>
-		<input type="checkbox" id="nav-trigger" class="nav-trigger" />
-		<label for="nav-trigger"></label>
-		<!--img id="menuButton" src="icon/menu-48.png"-->
-	<!--/div-->
+	<ul class="navigation">
+		<li class="nav-item"><a href="index.html">Accueil</a></li>
+		<li class="nav-item"><a href="#">Agenda</a></li>
+		<li class="nav-item"><a href="#">Annuaire</a></li>
+		<li class="nav-item"><a href="#">Menu RU</a></li>
+		<li class="nav-item"><a href="#">Chat</a></li>
+		<li class="nav-item"><a href="#">Paramètres</a></li>
+		<li class="nav-item"><a href="Javascript:history.go(-1)">Quitter</a></li>
+	</ul>
+	<input type="checkbox" id="nav-trigger" class="nav-trigger" />
+	<label for="nav-trigger"></label>
+		
 	<div class="site-wrap">
-		<div id="menu">
+		<div id="menu"><h1>UnistraMobile</h1></div>
+		<div id="icones">
+			<a href="index.html" id="agenda"><img src="icon/agenda-96.png"></a>
+			<a href="index.html" id="annuaire"><img src="icon/annuaire-96.png"></a>
+			<a href="index.html" id="manger"><img src="icon/manger-96.png"></a>
+			<a href="index.html" id="chat"><img src="icon/chat-96.png"></a>
 		</div>
-		<a href="index.html" id="agenda"><img src="icon/agenda-128.png"></a>
-		<a href="index.html" id="annuaire"><img src="icon/annuaire-128.png"></a>
-		<a href="index.html" id="manger"><img src="icon/manger-128.png"></a>
-		<a href="index.html" id="chat"><img src="icon/chat-128.png"></a>
-		<div id="footMenu">Flux RSS :</div>
+		
+		<div id="footMenu"><br>
+			<marquee>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fringilla vulputate interdum. Nam interdum tristique lectus sit amet vestibulum. Quisque vulputate tincidunt nulla, ut dictum lorem luctus a. Aliquam vel hendrerit eros, vel semper felis. Nullam sit amet efficitur mi, eu tempus sem. Vivamus vehicula gravida iaculis. Sed nibh lorem, tincidunt eget nisi in, varius dignissim felis. Mauris vitae fermentum dolor.
+Quisque congue risus vitae diam imperdiet, id blandit tortor pulvinar. Suspendisse eu ultricies nisl. Praesent bibendum ligula eget nunc fringilla, at commodo turpis bibendum. Nunc fermentum aliquet risus id sagittis. Phasellus fermentum, sem sed faucibus sollicitudin, felis orci pulvinar dolor, facilisis fringilla lorem risus quis est. Ut orci nulla, suscipit nec rutrum ut, luctus ac orci. Nulla facilisi. Cras viverra at mauris nec placerat. Morbi gravida arcu nec sem pretium luctus. Phasellus pretium velit vitae vestibulum vestibulum. Aliquam mollis mi mauris. Curabitur tincidunt elit non nibh gravida, non porta est scelerisque. Sed sed dictum ipsum.
+Fusce sit amet sapien vel libero rhoncus hendrerit. Pellentesque id neque sed odio posuere consectetur. Mauris lobortis pretium vestibulum. Fusce efficitur risus id ullamcorper vulputate. Sed et sapien efficitur, rutrum velit vitae, lacinia nulla. Duis at convallis mauris. Vestibulum maximus, mauris et auctor auctor, velit purus efficitur mi, vehicula blandit dolor mauris sit amet ante. Aenean commodo accumsan enim sed blandit. Suspendisse pulvinar mi in condimentum pretium. In malesuada, elit sit amet maximus tincidunt, ex orci hendrerit nisi, at placerat ante orci in velit. Phasellus aliquam porta massa eget porta. Duis tortor mauris, tincidunt vel rhoncus at, sollicitudin vitae est. Morbi ullamcorper porttitor libero. Morbi a gravida nunc.
+Integer sit amet venenatis velit. Nulla vel mollis urna, quis condimentum lacus. Integer magna sapien, fringilla in scelerisque nec, dapibus nec ligula. Donec rutrum magna ut lobortis posuere. Mauris ac magna ut lectus fermentum lobortis nec ut felis. Integer tempor nunc ut nisi commodo, non posuere sapien dignissim. Mauris ac sem mi. Ut facilisis finibus auctor. Aliquam id arcu id risus ultricies sollicitudin at in libero. Pellentesque eget sem sit amet risus ultrices dapibus vitae eget nulla. Cras id dui urna.
+Cras non nunc vel metus gravida euismod. Sed urna ipsum, pellentesque id diam et, suscipit semper dolor. Vivamus vel diam molestie, blandit nunc vel, porttitor eros. Sed luctus fermentum tellus tincidunt auctor. Donec venenatis interdum convallis. Nam tempus vestibulum tempor. Donec sed erat pharetra, egestas massa sit amet, tincidunt odio. Proin sed porttitor leo, quis feugiat felis. Nulla eget nisl efficitur, rhoncus ipsum id, tincidunt odio. Ut blandit, sapien dapibus ornare auctor, lacus dolor sodales ligula, non dictum ligula ante eget nisi. Praesent sagittis, augue nec dapibus eleifend, lacus nulla dapibus urna, non blandit mauris mi et magna.</marquee>
+		</div>
 	</div>
 </body>
 	
