Suppression du scroll et du zoom sur Androïd
Ça y est, on ne peut plus scroller ni zoomer n'importe comment sur
Androïd

--- a/unistramobile/index.html
+++ b/unistramobile/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <header>
+	<meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no" />
+
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<style type="text/css"></style>
