Ajout de champs pour connexion
Ajout du form de connexion

--- a/unistramobile/index.html
+++ b/unistramobile/index.html
@@ -14,8 +14,8 @@
 	<ul class="navigation">
 		<li class="nav-item"><a href="menu.html">Accueil</a></li>
 		<li class="nav-item"><a href="#">Agenda</a></li>
-		<li class="nav-item"><a href="#">Annuaire</a></li>
-		<li class="nav-item"><a href="#">Menu RU</a></li>
+		<li class="nav-item"><a href="http://annuaire.unistra.fr">Annuaire</a></li>
+		<li class="nav-item"><a href="http://restos-u.crous-strasbourg.fr/fr/menu-de-la-semaine">Menu RU</a></li>
 		<li class="nav-item"><a href="#">Chat</a></li>
 		<li class="nav-item"><a href="#">Paramètres</a></li>
 		<li class="nav-item"><a href="index.html">Quitter</a></li>
@@ -25,9 +25,17 @@
 		
 	<div class="site-wrap">
 		<div id="menu"><h1>UnistraMobile</h1></div>
+		<div class="connect-bar">
+		<form  action="menu.html" method="post">
+			Identifiant<br>
+			<input type="text"/><br>
+			Mot de passe<br>
+			<input type="password"/><br>
+			<input type="submit" value ="Envoyer"/><br>
+		</form>
+		<!--a href="menu.html" ><img src="icon/connect.svg">/<a-->
+		</div>
 		
-		<a href="menu.html" class="connect-bar"><img src="icon/connect.svg">/<a>
-	
 		<div id="footMenu">
 		</div>
 	</div>
