--- a/unistramobile/menu.html
+++ b/unistramobile/menu.html
@@ -15,7 +15,7 @@
 		<li class="nav-item"><a href="menu.html">Accueil</a></li>
 		<li class="nav-item"><a href="#">Agenda</a></li>
 		<li class="nav-item"><a href="http://annuaire.unistra.fr">Annuaire</a></li>
-		<li class="nav-item"><a href="#">Menu RU</a></li>
+		<li class="nav-item"><a href="http://restos-u.crous-strasbourg.fr/fr/menu-de-la-semaine">Menu RU</a></li>
 		<li class="nav-item"><a href="#">Chat</a></li>
 		<li class="nav-item"><a href="#">Paramètres</a></li>
 		<li class="nav-item"><a href="index.html">Quitter</a></li>
@@ -28,7 +28,7 @@
 		<div id="icones">
 			<a href="#" id="agenda"><img src="icon/agenda-96.png"></a>
 			<a href="http://annuaire.unistra.fr" id="annuaire"><img src="icon/annuaire-96.png"></a>
-			<a href="#" id="manger"><img src="icon/manger-96.png"></a>
+			<a href="http://restos-u.crous-strasbourg.fr/fr/menu-de-la-semaine" id="manger"><img src="icon/manger-96.png"></a>
 			<a href="#" id="chat"><img src="icon/chat-96.png"></a>
 		</div>
 		
